native_audio/frb_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef struct wire_cst_list_prim_u_8_loose {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_loose;
typedef struct wire_cst_list_prim_f_32_loose {
  float *ptr;
  int32_t len;
} wire_cst_list_prim_f_32_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_module_health_check(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_module_version(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_reset_all(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__get_whisper_sample_rate(void);
void frbgen_kivixa_wire__crate__api__process_streaming_audio(int64_t port_,
                                                             struct wire_cst_list_prim_u_8_loose *bytes,
                                                             float start_time,
                                                             bool force_transcribe);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__stt_available_models(void);
void frbgen_kivixa_wire__crate__api__stt_initialize(int64_t port_);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__stt_is_ready(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__stt_model_size(struct wire_cst_list_prim_u_8_strict *model_name);
void frbgen_kivixa_wire__crate__api__stt_process(int64_t port_,
                                                 struct wire_cst_list_prim_f_32_loose *samples,
                                                 float start_time);
void frbgen_kivixa_wire__crate__api__stt_process_buffer(int64_t port_, float start_time);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__stt_reset(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__stt_state(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__tts_available_voices(void);
void frbgen_kivixa_wire__crate__api__tts_initialize(int64_t port_);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__tts_is_ready(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__tts_state(void);
void frbgen_kivixa_wire__crate__api__tts_synthesize(int64_t port_,
                                                    struct wire_cst_list_prim_u_8_strict *text);
void frbgen_kivixa_wire__crate__api__tts_synthesize_to_bytes(int64_t port_,
                                                             struct wire_cst_list_prim_u_8_strict *text);
void frbgen_kivixa_wire__crate__api__tts_synthesize_to_i16(int64_t port_,
                                                           struct wire_cst_list_prim_u_8_strict *text);
void frbgen_kivixa_wire__crate__api__tts_synthesize_with_voice(int64_t port_,
                                                               struct wire_cst_list_prim_u_8_strict *text,
                                                               struct wire_cst_list_prim_u_8_strict *voice_id);