lib/src/rust_audio/frb_generated.io.dart


  late final _wire__crate__api__audio_module_health_checkPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__audio_module_health_check',
      );
  late final _wire__crate__api__audio_module_health_check =
      _wire__crate__api__audio_module_health_checkPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__audio_module_version() {
    return _wire__crate__api__audio_module_version();
  }

  late final _wire__crate__api__audio_module_versionPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__audio_module_version',
      );
  late final _wire__crate__api__audio_module_version =
      _wire__crate__api__audio_module_versionPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__audio_reset_all() {
    return _wire__crate__api__audio_reset_all();
  }

  late final _wire__crate__api__audio_reset_allPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__audio_reset_all',
      );
  late final _wire__crate__api__audio_reset_all =
      _wire__crate__api__audio_reset_allPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__get_whisper_sample_rate() {
    return _wire__crate__api__get_whisper_sample_rate();
  }

  late final _wire__crate__api__get_whisper_sample_ratePtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__get_whisper_sample_rate',
      );
  late final _wire__crate__api__get_whisper_sample_rate =
      _wire__crate__api__get_whisper_sample_ratePtr
          .asFunction<WireSyncRust2DartDco Function()>();

  void wire__crate__api__process_streaming_audio(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_loose> bytes,
    double start_time,
    bool force_transcribe,
  ) {
    return _wire__crate__api__process_streaming_audio(
      port_,
      bytes,
      start_time,
      force_transcribe,
    );
  }

  late final _wire__crate__api__process_streaming_audioPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            ffi.Float,
            ffi.Bool,
          )
        >
      >('frbgen_kivixa_wire__crate__api__process_streaming_audio');
  late final _wire__crate__api__process_streaming_audio =
      _wire__crate__api__process_streaming_audioPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_loose>,
              double,
              bool,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__stt_available_models() {
    return _wire__crate__api__stt_available_models();
  }

  late final _wire__crate__api__stt_available_modelsPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__stt_available_models',
      );
  late final _wire__crate__api__stt_available_models =
      _wire__crate__api__stt_available_modelsPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  void wire__crate__api__stt_initialize(int port_) {
    return _wire__crate__api__stt_initialize(port_);
  }

  late final _wire__crate__api__stt_initializePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
        'frbgen_kivixa_wire__crate__api__stt_initialize',
      );
  late final _wire__crate__api__stt_initialize =
      _wire__crate__api__stt_initializePtr.asFunction<void Function(int)>();

  WireSyncRust2DartDco wire__crate__api__stt_is_ready() {
    return _wire__crate__api__stt_is_ready();
  }

  late final _wire__crate__api__stt_is_readyPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__stt_is_ready',
      );
  late final _wire__crate__api__stt_is_ready =
      _wire__crate__api__stt_is_readyPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__stt_model_size(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> model_name,
  ) {
    return _wire__crate__api__stt_model_size(model_name);
  }

  late final _wire__crate__api__stt_model_sizePtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__stt_model_size');
  late final _wire__crate__api__stt_model_size =
      _wire__crate__api__stt_model_sizePtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  void wire__crate__api__stt_process(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_32_loose> samples,
    double start_time,
  ) {
    return _wire__crate__api__stt_process(port_, samples, start_time);
  }

  late final _wire__crate__api__stt_processPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_32_loose>,
            ffi.Float,
          )
        >
      >('frbgen_kivixa_wire__crate__api__stt_process');
  late final _wire__crate__api__stt_process = _wire__crate__api__stt_processPtr
      .asFunction<
        void Function(int, ffi.Pointer<wire_cst_list_prim_f_32_loose>, double)
      >();

  void wire__crate__api__stt_process_buffer(int port_, double start_time) {
    return _wire__crate__api__stt_process_buffer(port_, start_time);
  }

  late final _wire__crate__api__stt_process_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float)>>(
        'frbgen_kivixa_wire__crate__api__stt_process_buffer',
      );
  late final _wire__crate__api__stt_process_buffer =
      _wire__crate__api__stt_process_bufferPtr
          .asFunction<void Function(int, double)>();

  WireSyncRust2DartDco wire__crate__api__stt_reset() {
    return _wire__crate__api__stt_reset();
  }

  late final _wire__crate__api__stt_resetPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__stt_reset',
      );
  late final _wire__crate__api__stt_reset = _wire__crate__api__stt_resetPtr
      .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__stt_state() {
    return _wire__crate__api__stt_state();
  }

  late final _wire__crate__api__stt_statePtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__stt_state',
      );
  late final _wire__crate__api__stt_state = _wire__crate__api__stt_statePtr
      .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__tts_available_voices() {
    return _wire__crate__api__tts_available_voices();
  }

  late final _wire__crate__api__tts_available_voicesPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__tts_available_voices',
      );
  late final _wire__crate__api__tts_available_voices =
      _wire__crate__api__tts_available_voicesPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  void wire__crate__api__tts_initialize(int port_) {
    return _wire__crate__api__tts_initialize(port_);
  }

  late final _wire__crate__api__tts_initializePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
        'frbgen_kivixa_wire__crate__api__tts_initialize',
      );
  late final _wire__crate__api__tts_initialize =
      _wire__crate__api__tts_initializePtr.asFunction<void Function(int)>();

  WireSyncRust2DartDco wire__crate__api__tts_is_ready() {
    return _wire__crate__api__tts_is_ready();
  }

  late final _wire__crate__api__tts_is_readyPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__tts_is_ready',
      );
  late final _wire__crate__api__tts_is_ready =
      _wire__crate__api__tts_is_readyPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__tts_state() {
    return _wire__crate__api__tts_state();
  }

  late final _wire__crate__api__tts_statePtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__tts_state',
      );
  late final _wire__crate__api__tts_state = _wire__crate__api__tts_statePtr
      .asFunction<WireSyncRust2DartDco Function()>();

  void wire__crate__api__tts_synthesize(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> text,
  ) {
    return _wire__crate__api__tts_synthesize(port_, text);
  }

  late final _wire__crate__api__tts_synthesizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__tts_synthesize');
  late final _wire__crate__api__tts_synthesize =
      _wire__crate__api__tts_synthesizePtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)
          >();

  void wire__crate__api__tts_synthesize_to_bytes(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> text,
  ) {
    return _wire__crate__api__tts_synthesize_to_bytes(port_, text);
  }

  late final _wire__crate__api__tts_synthesize_to_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__tts_synthesize_to_bytes');
  late final _wire__crate__api__tts_synthesize_to_bytes =
      _wire__crate__api__tts_synthesize_to_bytesPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)
          >();

  void wire__crate__api__tts_synthesize_to_i16(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> text,
  ) {
    return _wire__crate__api__tts_synthesize_to_i16(port_, text);
  }

  late final _wire__crate__api__tts_synthesize_to_i16Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__tts_synthesize_to_i16');
  late final _wire__crate__api__tts_synthesize_to_i16 =
      _wire__crate__api__tts_synthesize_to_i16Ptr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)
          >();

  void wire__crate__api__tts_synthesize_with_voice(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> text,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> voice_id,
  ) {
    return _wire__crate__api__tts_synthesize_with_voice(port_, text, voice_id);
  }

  late final _wire__crate__api__tts_synthesize_with_voicePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__tts_synthesize_with_voice');
  late final _wire__crate__api__tts_synthesize_with_voice =
      _wire__crate__api__tts_synthesize_with_voicePtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__vad_current_state() {
    return _wire__crate__api__vad_current_state();
  }
